--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mo-bot",
   "version": "0.0.0",
   "private": true,
-  "author": "momo <mo-watanabe@dip-net.co.jp>",
+  "author": "momo <momo76w@gmail.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
     "cron": "^1.2.1",
